# practical_robot

./: README.md  usb_lidar_rviz.rviz
images/: RobotDemo-MadewithClipchamp-ezgif.com-video-to-gif-converter(1).gif:Zone.Identifier  RobotDemo-MadewithClipchamp-ezgif.com-video-to-gif-converter.gif:Zone.Identifier  frames.gv
practical_localization/: CMakeLists.txt  package.xml
practical_localization/include/practical_localization/: encoder_odom_publisher.h
practical_localization/nodes/: encoder_odom_publisher_node.cpp
practical_localization/src/: .encoder_odom_publisher.cpp.swp  .manual_pose_and_goal_pub.cpp.swp  encoder_odom_publisher.cpp  encoder_odom_publisher_mod.cpp  encoder_odom_publisher_old.cpp  log.txt  manual_pose_and_goal_pub.cpp  odom_plus.cpp  rviz_click_to_2d.cpp  tf_pub.cpp
practical_nav/: CMakeLists.txt  package.xml
practical_nav/config/: joystick.yaml
practical_nav/include/practical_nav/: differential_drive_robot.h  encoder_reader.h  motor_controller.h  path_planner.h
practical_nav/launch/: '  .basic_full.launch.swp  .joy_launch.launch.swp  basic_full.launch  basic_manual_waypoint.launch  ekf_manual_waypoint.launch  gmapping_only.launch  imu_manual_waypoint.launch  joy_launch.launch  joy_launch_diffDriveRobot.launch  joy_launch_sdd_output.launch  joy_mapping.launch  load_map_joy_mapping.launch  log.txt  minimal_manual.launch  remote_manual.launch  rvizClick_load_map_joy.launch
practical_nav/maps/: basementBoxMap.yaml  basementMap.pgm  basementMap.yaml  basementMapFull.pgm  basementMapFull.yaml  basmentBoxMap.pgm  basmentBoxMap.yaml  mainFloorMap.pgm  mainFloorMap.yaml  mainFloorMap2.pgm  mainFloorMap2.yaml  mainFloorMap3.pgm  mainFloorMap3.yaml  officeMap.pgm  officeMap.yaml  officeMap2.pgm  officeMap2.yaml  officeMap3.pgm  officeMap3.yaml
practical_nav/nodes/: differential_drive_node.cpp
practical_nav/param/: costmap_basic.yaml
practical_nav/src/: .ekf_drive_controller.cpp.swp  .simple_diff_drive.cpp.swp  differential_drive_robot.cpp  ekf_drive_controller.cpp  encoder_reader.cpp  log.txt  motor_controller.cpp  path_planner_node.cpp  simple_diff_drive.cpp  simple_diff_drive_basic.cpp  simple_diff_drive_mod.cpp  simple_drive_controller.cpp
practical_sensors/: CMakeLists.txt  package.xml
practical_sensors/include/practical_sensors/: encoder.h
practical_sensors/nodes/: encoder_node.cpp
practical_sensors/src/: encoder.cpp  tick_publisher.cpp
practical_sensors/test/: gtest.cpp  gtest_units.cpp  ros_gtest.cpp  ros_gtest.test  ros_gtest_copy.cpp  ros_gtest_full.cpp  ros_gtest_full.test  tick_publisher_test.cpp
rviz_configs/: basic_full.rviz  joy_mapping.rviz
